<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_10dp"
    tools:context=".ui.fragments.Fragment1">

    <TextView
        android:id="@+id/fragmentOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragmentOneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/enter_something"
        app:layout_constraintTop_toBottomOf="@id/fragmentOne" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendToFragmentTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to_fragment_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentOneEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>